--- a/basic/116072017008-黄飞雄-实验1.md
+++ b/basic/116072017008-黄飞雄-实验1.md
@@ -16,6 +16,12 @@
 
 
 
+
+
+![1569409319258](../image/13.png)
+
+![1569409342894](../image/14.png)
+
 登陆xshell 使用xshell登陆腾讯云
 
 ![1569382686320](../image/3.png)
